2.1.16
 * Include column family parameter when -st and -et are provided (CASSANDRA-11866)
 * Fix queries with empty ByteBuffer values in clustering column restrictions (CASSANDRA-12127) 
 * Disable passing control to post-flush after flush failure to prevent data loss (CASSANDRA-11828)
 * Allow STCS-in-L0 compactions to reduce scope with LCS (CASSANDRA-12040)
 * cannot use cql since upgrading python to 2.7.11+ (CASSANDRA-11850)
 * Fix filtering on clustering columns when 2i is used (CASSANDRA-11907)
 * Improve digest calculation in the presence of overlapping tombstones (CASSANDRA-11349)


2.1.15
 * Account for partition deletions in tombstone histogram (CASSANDRA-12112)
 * Avoid stalling paxos when the paxos state expires (CASSANDRA-12043)
 * Remove finished incoming streaming connections from MessagingService (CASSANDRA-11854)
 * Don't try to get sstables for non-repairing column families (CASSANDRA-12077)
 * Prevent select statements with clustering key > 64k (CASSANDRA-11882)
 * Avoid marking too many sstables as repaired (CASSANDRA-11696)
 * Fix clock skew corrupting other nodes with paxos (CASSANDRA-11991)
 * Remove distinction between non-existing static columns and existing but null in LWTs (CASSANDRA-9842)
 * Support mlockall on IBM POWER arch (CASSANDRA-11576)
 * Cache local ranges when calculating repair neighbors (CASSANDRA-11933)
 * Allow LWT operation on static column with only partition keys (CASSANDRA-10532)
 * Create interval tree over canonical sstables to avoid missing sstables during streaming (CASSANDRA-11886)
 * cqlsh COPY FROM: shutdown parent cluster after forking, to avoid corrupting SSL connections (CASSANDRA-11749)
 * Updated cqlsh Python driver to fix DESCRIBE problem for legacy tables (CASSANDRA-11055)
 * cqlsh: apply current keyspace to source command (CASSANDRA-11152)
 * Backport CASSANDRA-11578 (CASSANDRA-11750)
 * Clear out parent repair session if repair coordinator dies (CASSANDRA-11824)