@@ -1,4 +1,5 @@
 2.1.16
+ * Fix merkle tree depth calculation (CASSANDRA-12580)
  * Include column family parameter when -st and -et are provided (CASSANDRA-11866)
  * Fix queries with empty ByteBuffer values in clustering column restrictions (CASSANDRA-12127) 
  * Disable passing control to post-flush after flush failure to prevent data loss (CASSANDRA-11828)
